Remove data Logger selection

--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -78,8 +78,7 @@
 										</c:otherwise>
 									</c:choose>
 								</div>
-							</p:panel> 
-							</td>
+							</p:panel></td>
 					</tr>
 				</table>
 			</h:form>
