--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -73,7 +73,7 @@
 												value="#{request.contextPath}/../resources/images/buildings/#{analysisBean.buildingSelected.imgPath}">
 											</p:graphicImage>
 											<p:commandButton value="Change"
-												onclick="PF('selectionPopup').show()"
+												onclick="PF('selectionPopupbuildings').show()" ajax="true"
 												icon="fa fa-fw fa-building" styleClass="simpleButton" />
 										</c:otherwise>
 									</c:choose>
@@ -84,6 +84,9 @@
 			</h:form>
 		</div>
 		<ui:include src="./general/footer.xhtml" />
-		<ui:include src="./popups/selectionPopup.xhtml" />
+		<ui:include src="./popups/selectionPopup.xhtml" >
+			<ui:param name="id" value="buildings"></ui:param>
+			<ui:param name="valuesPassed" value="#{clbHomeLoginBean.userLoginPojo.currentUser.buildings}" />
+		</ui:include>
 	</ui:define>
 </ui:composition>
