--- a/src/main/webapp/pages/popups/selectionPopup.xhtml
+++ b/src/main/webapp/pages/popups/selectionPopup.xhtml
@@ -8,23 +8,28 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="../template/ui.xhtml">
 	<ui:define name="body">
-		<p:dialog widgetVar="selectionPopup#{id}" id="selectionPopup#{id}" width="400px"
-			modal="true" position="center center" draggable="false"
-			closable="true" header="Select Building" closeOnEscape="true"  resizable="false">
-			<h:form>
-				<div>
-					<p:dataTable id="paginatorSelector" value="#{clbHomeLoginBean.userLoginPojo.currentUser.buildings}" var="value"
-						paginator="true" 
-						paginatorPosition="bottom"
-						paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                         rowsPerPageTemplate="5,10,15">
-						<p:column>
-							<h:outputText value="#{value.name}"></h:outputText>
-						</p:column>
-						<p:column>
-							<h:outputText value="#{value.name}"></h:outputText>
-						</p:column>
-					</p:dataTable>
+		<p:dialog widgetVar="selectionPopupBuilding" dynamic="true"
+			id="selectionPopupBuilding" width="400px" modal="true"
+			position="center center" draggable="false" closable="true"
+			header="Select Building" closeOnEscape="true" resizable="false">
+			<h:form id="selectionBuildingForm">
+				<p:dataTable id="paginatorSelector" widgetVar="paginatorSelector" scrollable="true" scrollHeight="50"
+					value="#{clbHomeLoginBean.userLoginPojo.currentUser.buildings}"
+					rows="5"
+					rowKey="#{building.name}" 
+					var="building" 
+					selectionMode="single"
+					selection="#{analysisBean.tempBuildingSelected}">
+					<p:ajax event="rowSelect" update=":selectionBuildingForm:paginatorSelector"  listener="#{analysisBean.buildingSelectionTriggered}"></p:ajax>
+					<p:column>
+						<div align="center">
+							<h:outputText value="#{building.name}"></h:outputText>
+						</div>
+					</p:column>
+				</p:dataTable>
+				<br />
+				<div align="center">
+					<p:commandButton value="Select" ajax="false" type="submit" action="#{analysisBean.selectBuilding}"/>
 				</div>
 			</h:form>
 		</p:dialog>
