Creating Analyzer Registries Base

--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -40,9 +40,7 @@
 								<f:selectItems value="#{analysisBean.analysisTypes}"
 									var="analysisTyp" itemValue="#{analysisTyp}"
 									itemLabel="#{analysisTyp.label}" />
-							</p:selectOneMenu> <p:spacer height="20"></p:spacer> <p:commandButton
-								value="Meter | General" icon="fa fa-fw fa-tachometer"
-								styleClass="menuAnalysisButton" /> <p:spacer height="5"></p:spacer>
+							</p:selectOneMenu> <p:spacer height="20"></p:spacer>
 							<p:commandButton value="Measure | Power (kW)"
 								icon="fa fa-fw fa-database" styleClass="menuAnalysisButton" />
 							<p:spacer height="5"></p:spacer> <p:commandButton value="Saved"
