Implementing Saving Registry Strategy

--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -109,7 +109,7 @@
 								<p:spacer height="5" />
 								<p:chart styleClass="analysisChartCSS" id="chartDayId"
 									widgetVar="chartDayId"
-									model="#{analysisBean.analysisBarDayPojo.lineModel}"
+									model="#{analysisBean.analysisDayPojo.lineModel}"
 									type="line" />
 							</p:panel></td>
 					</tr>
