teste change commandLine to Button

--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -38,7 +38,8 @@
 								</p:column>
 								<p:column>
 									<p:inputText label="passwordUser" id="passwordUser"
-										value="#{clbHomeLoginBean.userLoginPojo.password}" type="password" />
+										value="#{clbHomeLoginBean.userLoginPojo.password}"
+										type="password" />
 								</p:column>
 								<p:column>
 									<p:spacer width="40" />
@@ -122,20 +123,50 @@
 							</p:column>
 						</p:panelGrid>
 						<p:spacer height="20" />
-						<div align="center">
-							<p:commandLink oncomplete="PF('resendEmail').show()"
-								value="Resend Registration Email"
-								styleClass="recoverLinkPassword"></p:commandLink>
-							<br />
-							<p:commandLink oncomplete="PF('recoverPassword').show()"
-								value="Forget your password?" styleClass="recoverLinkPassword"></p:commandLink>
-							<br /> <br />
-							<p:commandButton
-								action="#{clbHomeRegisterBean.registerUserAccount}"
-								validateClient="true" styleClass="signButtonExtended"
-								value="Register" ajax="true"
-								onstart="document.body.style.cursor='wait'"
-								oncomplete="
+						<!-- 						<div align="center"> -->
+
+
+						<div class="ui-g">
+							<div class="ui-g-4"></div>
+							<div class="ui-g-4">
+
+								<p:button oncomplete="PF('resendEmail').show()"
+									value="Resend Registration Email">
+								</p:button>
+							</div>
+
+							<div class="ui-g-4"></div>
+						</div>
+
+
+
+						<!-- 							<p:commandLink oncomplete="PF('resendEmail').show()" -->
+						<!-- 								value="Resend Registration Email" -->
+						<!-- 								styleClass="recoverLinkPassword"></p:commandLink> -->
+						<br />
+						<div class="ui-g">
+							<div class="ui-g-4"></div>
+							<div class="ui-g-4">
+
+
+								<p:button oncomplete="PF('recoverPassword').show()"
+									value="Forget your password?">
+								</p:button>
+							</div>
+
+							<div class="ui-g-4"></div>
+						</div>
+
+						<!-- 							<p:commandLink oncomplete="PF('recoverPassword').show()" -->
+						<!-- 								value="Forget your password?" styleClass="recoverLinkPassword"></p:commandLink> -->
+						<br />
+						<br />
+						<p:commandButton
+							action="#{clbHomeRegisterBean.registerUserAccount}"
+							validateClient="true" styleClass="signButtonExtended"
+							value="Register" ajax="true"
+							onstart="document.body.style.cursor='wait'"
+							oncomplete="
 											document.body.style.cursor='default';
 											if (!args.validationFailed){
 												document.body.style.cursor = 'default'; 
@@ -147,8 +178,8 @@
 												}
 												else PF('successPanelregistry').show(); 
 											}"
-								update="registerForm"></p:commandButton>
-						</div>
+							update="registerForm"></p:commandButton>
+						<!-- 						</div> -->
 					</p:panel>
 				</h:form>
 			</div>
